# calendar

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md
.cache/clangd/index/: activity.cpp.2A3E661299841BCC.idx  activity.h.7C68413A16CA0293.idx  addEventDialog.cpp.770CCBF6A72AB595.idx  gui.cpp.182A0113A1C5FC8A.idx  gui.cpp.82B78191716F77D5.idx  gui.h.8C26371BEAFBFC23.idx  gui.h.B979D37AD5EE8ED0.idx  main.cpp.6ED5DCEC6E5C66F6.idx  main.cpp.793C8B68F651A199.idx  main.h.B7C6BB4915447B34.idx  main.h.F0D34748F4453787.idx
data/: openCalendar.desktop
src/: CMakeLists.txt  activity.cpp  activity.h  gui.cpp  gui.h  main.cpp  main.h
